# lific

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deploy.sh  glama.json  server.json
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/: mcp-registry.md
integrations/opencode-lific-plans/: README.md  index.ts
migrations/: 001_initial.sql  002_page_identifiers.sql  003_api_keys.sql  005_users.sql  006_comments.sql  008_project_lead.sql  010_api_key_id.sql  012_page_comments.sql  013_page_labels.sql  014_oauth_user_id.sql  017_issue_activity_triggers.sql  022_page_pinned.sql  023_instance_settings.sql  025_project_sort_order.sql  026_project_members.sql  027_authz_enforced.sql  029_saved_views.sql  030_oauth_device_codes.sql  031_attachments.sql  033_import_source.sql  034_comment_search.sql
promo/: package.json
promo/src/: Ad.tsx  Root.tsx  fonts.ts  theme.ts  timing.ts
promo/src/components/: Background.tsx  BrowserFrame.tsx  Cursor.tsx  Terminal.tsx  board.tsx  instance-settings-ui.tsx  issue-detail-ui.tsx  issue-list-ui.tsx  lific-ui.tsx  text.tsx
promo/src/scenes/: AgentScene.tsx  Agitate.tsx  ColdOpen.tsx  Cta.tsx  Proof.tsx  Reveal.tsx  TeamsScene.tsx  TerminalScene.tsx  UIScene.tsx  WebUIScene.tsx
site/: .gitignore  next.config.ts  package.json
site/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
site/app/compare/: page.tsx
site/app/components/: SiteHeader.tsx
site/app/docs/: layout.tsx
site/content/docs/: cli.mdx  configuration.mdx  connect.mdx  index.mdx  installation.mdx  meta.json  quickstart.mdx  self-hosting.mdx  upgrading.mdx  web-ui.mdx  windows.mdx
src/: auth.rs  authz.rs  authz_coverage_tests.rs  backup.rs  config.rs  dump.rs  error.rs  export.rs  import.rs  main.rs  oauth.rs  ratelimit.rs  realtime.rs  storage.rs
src/api/: activity.rs  attachments.rs  auth.rs  comments.rs  export.rs  insights.rs  issues.rs  members.rs  mod.rs  pages.rs  plans.rs  projects.rs  resources.rs  views.rs
src/cli/: credentials.rs  doctor.rs  exec.rs  http.rs  import.rs  login.rs  mod.rs  service.rs  ui.rs
src/cli/connect/: mod.rs
src/db/: migrate.rs  mod.rs  models.rs
src/db/queries/: activity.rs  attachments.rs  comments.rs  insights.rs  issues.rs  members.rs  mod.rs  pages.rs  plans.rs  projects.rs  resources.rs  search.rs  settings.rs  users.rs  views.rs
src/import/: github.rs  mod.rs
src/import/fixtures/: github_issues.json
src/mcp/: mod.rs  schemas.rs  tools.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/lib/: ActivityTimeline.svelte  AttachmentSection.svelte  AuthShell.svelte  ColorPicker.svelte  CommandPalette.svelte  CommentThread.svelte  Comments.svelte  ContextMenu.svelte  DeleteMenu.svelte  DocumentDetail.svelte  EditableMarkdown.svelte  ErrorState.svelte  IconPicker.svelte  ImportPanel.svelte  InlineTitle.svelte  IssuePickerModal.svelte  LabelEditor.svelte  LabelManager.svelte  Layout.svelte  Markdown.svelte  Mascot.svelte  ProjectForm.svelte  ProjectIcon.svelte  QuoteSelectionToolbar.svelte  Select.svelte  api.ts  (+21 more)
(+49 files in other folders)
